Added metadata and SEO elements

--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="desctiption"
+      content="This is the website of a croissant and how to contact the croissant"
+    />
+    <title>Contact | Croissant.com</title>
     <link rel="stylesheet" href="/Croissant/css/styles.css" />
   </head>
   <body>
-    <h1><a href="mailto:croissant@shecoes.io">Contact Me</a></h1>
-    <a href="/Croissant/index.html">Back to homepage</a>
+    <h1>
+      <a href="mailto:croissant@shecoes.io" target="none" title="Email me"
+        >Contact Me</a
+      >
+    </h1>
+    <a href="/Croissant/index.html" target="none" title="Home"
+      >Back to homepage</a
+    >
     <br />
-    <a href="/Croissant/photo.html">My photo</a>
+    <a href="/Croissant/photo.html" target="none" title="My photo">My photo</a>
     <br />
   </body>
 </html>
