--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="desctiption" content="This is the website of a croissant" />
+    <title>Home | Croissant.com</title>
     <link rel="stylesheet" href="/Croissant/css/styles.css" />
   </head>
   <body>
     <h1>Je suis un croissant</h1>
-    <a href="/Croissant/contact.html">Contact</a>
+    <a href="/Croissant/contact.html" target="none" title="Contact">Contact</a>
     <br />
-    <a href="/Croissant/photo.html">My photo</a>
+    <a href="/Croissant/photo.html" target="none" title="My photo">My photo</a>
     <br />
   </body>
 </html>
