--- a/photo.html
+++ b/photo.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="desctiption" content="This is the website of a croissant and it contains a photo of the croissant" />
+    <title>Photo | Croissant.com</title>
     <link rel="stylesheet" href="/Croissant/css/styles.css" />
   </head>
   <body>
     <h1>C'est moi</a></h1>
-    <img src="/Croissant/croissant.jpg" width="600px"></br>
-    <a href="/Croissant/index.html">Back to homepage</a>
+    <img src="/Croissant/croissant.jpg" width="600px" alt="Basket with patterned cloth over it containing several croissants"></br>
+    <a href="/Croissant/index.html" target="none" title="Home">Back to homepage</a>
     <br />
-    <a href="/Croissant/contact.html">Contact Me</a>
+    <a href="/Croissant/contact.html" target="none" title="Contact Me">Contact Me</a>
     <br />
   </body>
 </html>
